# Chip8-Simulator

./: CMakeLists.txt  README.md
notes/: Chip8.md
notes/specification/: clock.md  graphics_and_sound.md  input.md  memory.md  opcodes.md  registers.md  stack.md
src/: CMakeLists.txt
